--- a/HangerApplication/app/src/main/res/layout/activity_calendar.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_calendar.xml
@@ -8,12 +8,12 @@ android:minWidth="300dp"
 android:orientation="vertical"
 android:weightSum="1">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:background="#ffffff"
-        android:layout_height="56dp"
-        android:orientation="horizontal"
-        android:weightSum="1">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:background="#ffffff"
+    android:layout_height="56dp"
+    android:orientation="horizontal"
+    android:weightSum="1">
 
 
     <ImageView
@@ -22,49 +22,54 @@ android:weightSum="1">
         android:layout_height="45dp"
         android:layout_gravity="center"
         app:srcCompat="@drawable/hanger" />
-    </LinearLayout>
+</LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/dress_insert_Layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-        android:background="#ffffff"
-        android:orientation="horizontal">
+<LinearLayout
+    android:id="@+id/dress_insert_Layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentStart="true"
+    android:background="#ffffff"
+    android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/date_text"
-            android:layout_width="280dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:padding="10dp"
-            android:textAlignment="center"
-            android:textColor="#000000"
-            android:textSize="17dp" />
+    <TextView
+        android:id="@+id/date_text"
+        android:layout_width="280dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:padding="10dp"
+        android:textAlignment="center"
+        android:textColor="#000000"
+        android:textSize="17dp" />
 
-        <ImageButton
-            android:id="@+id/delete_btn"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_gravity="center"
-            android:paddingRight="10dp"
-            android:layout_toRightOf="@+id/codi_info_edit_btn"
-            android:background="@color/colorWhite"
-            android:elevation="0dp"
-            app:srcCompat="@android:drawable/ic_menu_delete" />
-    </LinearLayout>
-
-    <GridView
-            android:id="@+id/calendar_gridview"
+    <ImageButton
+        android:id="@+id/delete_btn"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:columnWidth="100dp"
-        android:horizontalSpacing="10dp"
-        android:numColumns="2"
-        android:padding="5dp"
-        android:verticalSpacing="10dp" />
+        android:layout_gravity="center"
+        android:paddingRight="10dp"
+        android:layout_toRightOf="@+id/codi_info_edit_btn"
+        android:background="@color/colorWhite"
+        android:elevation="0dp"
+        app:srcCompat="@android:drawable/ic_menu_delete" />
+</LinearLayout>
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_weight="1">
 
 
+    <GridView
+    android:id="@+id/calendar_gridview"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:columnWidth="100dp"
+    android:horizontalSpacing="10dp"
+    android:numColumns="2"
+    android:padding="5dp"
+    android:verticalSpacing="10dp" />
 
+
+    </RelativeLayout>
 </LinearLayout>
