--- a/HangerApplication/app/src/main/res/layout/fragment_home.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_home.xml
@@ -66,6 +66,12 @@
             android:layout_weight="1">
 
 
+            <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:layout_weight="0.1">
+
             <GridView
                 android:id="@+id/home_gridview"
                 android:layout_width="fill_parent"
@@ -76,6 +82,7 @@
                 android:numColumns="2"
                 android:padding="10dp"
                 android:verticalSpacing="10dp" />
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/home_insert_Layout"
