--- a/HangerApplication/app/src/main/res/layout/item_viewpager.xml
+++ b/HangerApplication/app/src/main/res/layout/item_viewpager.xml
@@ -7,46 +7,35 @@
 
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:background="@color/colorPrimary"
         tools:ignore="MissingConstraints"
         tools:layout_editor_absoluteY="8dp">
-
-        <TextView
-            android:id="@+id/whoesCodi"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/imgbtn"
-            android:layout_alignParentEnd="true"
-            android:text="TextView" />
 
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:padding="10dp"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentTop="false"
+            android:layout_margin="3dp"
+            android:background="@android:color/white"
             app:srcCompat="@drawable/tempimg" />
 
-        <ImageButton
+        <ImageView
             android:id="@+id/imgbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginBottom="55dp"
-            android:backgroundTint="@android:color/white"
-            app:srcCompat="@drawable/like_blank" />
+            android:layout_alignBottom="@+id/image"
+            android:layout_alignEnd="@+id/image"
+            android:layout_alignParentBottom="false"
+            android:layout_alignParentEnd="false"
+            android:layout_marginBottom="15dp"
+            android:layout_marginEnd="15dp"
+            android:tint="@color/colorAccent"
+            app:srcCompat="@drawable/like_magenta" />
 
-        <TextView
-            android:id="@+id/likesNum"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_marginBottom="78dp"
-            android:layout_toStartOf="@+id/imgbtn"
-            android:text="0" />
     </RelativeLayout>
 
 </android.support.constraint.ConstraintLayout>
