--- a/HangerApplication/app/src/main/res/values/colors.xml
+++ b/HangerApplication/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#dbafe8</color>
+    <color name="colorPrimary">#c094cd</color>
     <color name="colorPrimaryDark">#6a219d</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff4081</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorpp">#a568b7</color>
