--- a/HangerApplication/app/src/main/res/layout/activity_signup_approved.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_signup_approved.xml
@@ -18,10 +18,11 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="357dp"
-        android:layout_height="198dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_weight="0.11"
-        app:srcCompat="@drawable/tempimg" />
+        android:tint="@color/colorPrimary"
+        app:srcCompat="@drawable/ic_mail_outline_black_24dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
