키 몸무게 추가 및 db변경 완료 브랜드 태그(addInfoFragment) 및 db 변경 완료 달력 >> 날씨도 user_Daily 디비에 저장되도록 함 shared_codi 부분에 키와 몸무게 저장되도록 변경

--- a/HangerApplication/app/src/main/res/layout/activity_edit_info.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_edit_info.xml
@@ -50,7 +50,7 @@
             android:id="@+id/username_edittext"
             android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tagtext"
+            android:layout_alignBottom="@+id/brandText"
             android:layout_alignParentEnd="true"
             android:imeOptions="actionDone"
             android:lines="1"
@@ -82,7 +82,7 @@
             android:id="@+id/Pw_edittext"
             android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tagtext"
+            android:layout_alignBottom="@+id/brandText"
             android:layout_alignParentEnd="true"
             android:hint="현재 비밀번호를 입력해주세요"
             android:imeOptions="actionDone"
@@ -116,7 +116,7 @@
             android:id="@+id/newpw_edittext"
             android:layout_width="220dp"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tagtext"
+            android:layout_alignBottom="@+id/brandText"
             android:layout_alignParentEnd="true"
             android:hint="새로운 비밀번호를 입력해주세요"
             android:imeOptions="actionDone"
