--- a/HangerApplication/app/src/main/res/layout/activity_add_coordy.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_add_coordy.xml
@@ -54,16 +54,22 @@
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/imageView9"
             android:ems="10"
-            android:hint="이름을 지어주세요"
+            android:hint="tag"
             android:inputType="textPersonName" />
+
+        <TextView
+            android:id="@+id/testView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignStart="@+id/shareInfoText"
+            android:layout_alignTop="@+id/imageView9" />
 
         <RelativeLayout
             android:id="@+id/codi_main_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/categorySpinner"
             android:layout_alignParentStart="true"
-            android:layout_below="@+id/addcoordy_name">
+            android:layout_below="@+id/saveBtn">
 
             <ImageView
                 android:id="@+id/top_View"
@@ -73,7 +79,22 @@
                 android:layout_alignParentEnd="false" />
 
             <ImageView
+                android:id="@+id/outer_View"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
                 android:id="@+id/bottom_View"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/acc_View"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/dress_View"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </RelativeLayout>
