--- a/HangerApplication/app/src/main/res/layout/activity_edit_closet.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_edit_closet.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="카테고리"
-            android:textColor="#000000"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="15dp"
             android:textStyle="bold" />
 
@@ -46,7 +46,7 @@
             android:id="@+id/categorytext2"
             android:layout_width="230dp"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/tagtext"
+            android:layout_alignBottom="@+id/brandText"
             android:layout_alignParentEnd="true"
             android:imeOptions="actionDone"
             android:lines="1"
@@ -70,7 +70,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:text="계절"
-            android:textColor="#000000"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="15dp"
             android:textStyle="bold" />
 
@@ -90,6 +90,74 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="#ffffff"
+        android:padding="5dp">
+
+        <TextView
+            android:id="@+id/brandText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/colorText"
+            android:padding="10dp"
+            android:text="태그"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15dp"
+            android:textStyle="bold"
+            tools:ignore="NotSibling" />
+
+        <EditText
+            android:id="@+id/AddPost_HashTag_Edittext"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/color_Edittext"
+            android:hint="#데이트룩, #러블리, ..."
+            android:imeOptions="actionDone"
+            android:lines="1"
+            android:singleLine="true"
+            android:textColor="#b3b3b3"
+            android:textSize="15dp"
+            tools:ignore="NotSibling" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:padding="5dp">
+
+        <TextView
+            android:id="@+id/brandText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:padding="10dp"
+            android:text="브랜드"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="15dp"
+            android:textStyle="bold" />
+
+        <AutoCompleteTextView
+            android:id="@+id/brandEditText"
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@+id/color_Edittext"
+            android:completionHint="pick an item"
+            android:completionThreshold="2"
+            android:imeOptions="actionDone"
+            android:lines="1"
+            android:singleLine="true"
+            android:textColor="#b3b3b3"
+            android:textSize="15dp"
+            tools:ignore="NotSibling" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="52dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -104,7 +172,7 @@
             android:layout_alignParentTop="true"
             android:padding="10dp"
             android:text="색깔"
-            android:textColor="#000000"
+            android:textColor="@color/colorPrimaryDark"
             android:textSize="15dp"
             android:textStyle="bold" />
 
@@ -147,55 +215,19 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:background="#ffffff"
-        android:padding="5dp">
-
-        <TextView
-            android:id="@+id/tagtext"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/colorText"
-            android:padding="10dp"
-            android:text="태그"
-            android:textColor="#000000"
-            android:textSize="15dp"
-            android:textStyle="bold"
-            tools:ignore="NotSibling" />
-
-        <EditText
-            android:id="@+id/AddPost_HashTag_Edittext"
-            android:layout_width="230dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/color_Edittext"
-            android:hint="#데이트룩, #러블리, ..."
-            android:imeOptions="actionDone"
-            android:lines="1"
-            android:singleLine="true"
-            android:textColor="#b3b3b3"
-            android:textSize="15dp"
-            tools:ignore="NotSibling" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_margin="5dp"
-        android:background="#ffffff"
-        android:padding="10dp">
+        android:gravity="center_horizontal">
 
         <Button
             android:id="@+id/additem_insertbutton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_gravity="left"
-            android:layout_marginBottom="10dp"
-            android:layout_marginLeft="30dp"
+            android:layout_alignParentStart="false"
 
-            android:background="#9848d1"
+            android:layout_alignParentTop="true"
+            android:layout_gravity="left"
+            android:background="@color/colorpp"
             android:text="편집"
             android:textColor="#ffffff"
             android:textStyle="bold" />
@@ -204,12 +236,11 @@
             android:id="@+id/cancel_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentTop="true"
             android:layout_gravity="right"
-            android:layout_marginBottom="10dp"
-            android:layout_marginRight="30dp"
-            android:background="#9848d1"
+            android:layout_marginStart="21dp"
+            android:layout_toEndOf="@+id/additem_insertbutton"
+            android:background="@color/colorpp"
             android:text="취소"
             android:textColor="#ffffff"
             android:textStyle="bold" />
