--- a/HangerApplication/app/src/main/res/layout/activity_signup.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_signup.xml
@@ -27,7 +27,7 @@
 
         <ImageView
             android:id="@+id/imageView11"
-            android:layout_width="313dp"
+            android:layout_width="257dp"
             android:layout_height="102dp"
             app:srcCompat="@drawable/joinus" />
 
@@ -44,7 +44,7 @@
     <ScrollView
         android:id="@+id/signup_form"
         android:layout_width="match_parent"
-        android:layout_height="148dp"
+        android:layout_height="wrap_content"
         android:layout_weight="0.27">
 
         <LinearLayout
@@ -96,7 +96,8 @@
                         android:hint="Email"
                         android:imeActionId="@+id/login"
                         android:maxLines="1"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        tools:ignore="InvalidImeActionId" />
 
                     <Button
                         android:id="@+id/button"
@@ -128,7 +129,45 @@
                         android:imeActionId="@+id/login"
                         android:inputType="textPassword"
                         android:maxLines="1"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        tools:ignore="InvalidImeActionId" />
+
+                </LinearLayout>
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <EditText
+                        android:id="@+id/tallTextview"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_favorite_border_black_24dp"
+                        android:hint="tall "
+                        android:imeActionId="@+id/login"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        tools:ignore="InvalidImeActionId" />
+
+                    <EditText
+                        android:id="@+id/weightTextView"
+                        android:layout_width="100dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:drawableStart="@drawable/ic_favorite_border_black_24dp"
+                        android:hint="weight"
+                        android:imeActionId="@+id/login"
+                        android:maxLines="1"
+                        android:singleLine="true"
+                        tools:ignore="InvalidImeActionId" />
 
                 </LinearLayout>
 
