--- a/HangerApplication/app/src/main/res/layout/activity_camera.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_camera.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:text="사진찍기"
             android:id="@+id/Camera_takeBTN"/>
         <Button
@@ -25,7 +25,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:text="다시찍기"
             android:id="@+id/Camera_retakeBTN"/>
         <Button
@@ -33,9 +33,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:text="사용하기"
             android:id="@+id/Camera_saveBTN"/>
+        <Button
+            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="15dp"
+            android:text="배경지우기"
+            android:id="@+id/Camera_grabBTN"/>
 
     </LinearLayout>
     <FrameLayout
