--- a/HangerApplication/app/src/main/res/layout/activity_camera2.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_camera2.xml
@@ -1,15 +1,55 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical"
+tools:context="com.example.geehy.hangerapplication.CameraActivity2">
 
-    <LinearLayout tools:context="com.example.geehy.hangerapplication.CameraActivity2" android:orientation="vertical" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+<LinearLayout
+    android:layout_marginTop="5dp"
+    android:orientation="horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <Button
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="15dp"
+        android:text="배경지우기"
+        android:onClick="Grab_onClick"
+        android:id="@+id/Subtract_btn"/>
+    <Button
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="15dp"
+        android:text="저장하기"
+        android:onClick="Save_onClick"
+        android:id="@+id/Save_btn"/>
 
-
-    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="5dp">
-
-
-    <Button android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/Save_btn" android:onClick="Save_onClick" android:text="저장하기" android:textSize="15dp" android:gravity="center" android:layout_weight="1"/>
-
-    </LinearLayout>
-
-    <ImageView android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/Capture_img" android:background="#FFFFFF" android:maxHeight="1000dp" android:adjustViewBounds="true"/>
+    <Button
+        android:layout_weight="1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textSize="15dp"
+        android:text="편집하기"
+        android:id="@+id/btnEDIT"/>
 
 </LinearLayout>
+    <ImageView
+        android:id="@+id/Capture_img"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:maxHeight="1000dp"
+        android:background="#FFFFFF"/>
+
+
+</LinearLayout>
+
+
