--- a/HangerApplication/app/src/main/res/values/dimens.xml
+++ b/HangerApplication/app/src/main/res/values/dimens.xml
@@ -8,4 +8,9 @@
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="nav_header_vertical_spacing">16dp</dimen>
     <dimen name="nav_header_height">160dp</dimen>
+
+        <dimen name="editor_size">35dp</dimen>
+        <dimen name="normal_margin">8dp</dimen>
+        <dimen name="large_margin">16dp</dimen>
+
 </resources>
