--- a/HangerApplication/app/src/main/res/xml/file_paths.xml
+++ b/HangerApplication/app/src/main/res/xml/file_paths.xml
@@ -1,7 +1,16 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-    <paths xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <external-path path="Android/data/com.example.geehy.hangerapplication/files/Pictures" name="my_images"/>
-
+<?xml version="1.0" encoding="utf-8"?>
+<paths xmlns:android="http://schemas.android.com/apk/res/android">
+<external-path name="my_images" path="Android/data/com.example.geehy.hangerapplication/files/Pictures" />
 </paths>
+
+
+    <!--
+    <?xml version="1.0" encoding="UTF-8"?>
+
+        <paths xmlns:android="http://schemas.android.com/apk/res/android">
+
+        <external-path path="Android/data/com.example.geehy.hangerapplication/files/Pictures" name="my_images"/>
+
+    </paths>
+    -->
+
