--- a/HangerApplication/app/src/main/res/layout/activity_add_coordy.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_add_coordy.xml
@@ -76,6 +76,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="false"
+                android:adjustViewBounds="true"
+                android:scaleType="matrix"
                 android:layout_alignParentEnd="false" />
 
             <ImageView
