--- a/HangerApplication/app/src/main/res/layout/fragment_home.xml
+++ b/HangerApplication/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,7 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingActionButton"
-        android:layout_width="52dp"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="72dp"
@@ -25,13 +25,13 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingButton_delete"
-        android:layout_width="52dp"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
         android:layout_marginBottom="132dp"
         android:layout_marginRight="16dp"
         android:layout_weight="0.03"
-        android:src="@drawable/ic_clear_24dp"
+        android:src="@drawable/ic_delete_black_24dp"
         app:background="@color/colorPrimary"
         app:backgroundTint="#9848d1"
         app:elevation="5dp"
@@ -40,13 +40,13 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/floatingButton_undo"
-        android:layout_width="52dp"
+        android:layout_width="48dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right"
-        android:layout_marginBottom="192dp"
+        android:layout_marginBottom="72dp"
         android:layout_marginRight="16dp"
         android:layout_weight="0.03"
-        android:src="@drawable/ic_undo"
+        android:src="@drawable/ic_reply_black_24dp"
         app:background="@color/colorPrimary"
         app:backgroundTint="#9848d1"
         app:elevation="5dp"
@@ -66,12 +66,6 @@
             android:layout_weight="1">
 
 
-            <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_weight="0.1">
-
             <GridView
                 android:id="@+id/home_gridview"
                 android:layout_width="fill_parent"
@@ -81,8 +75,11 @@
                 android:horizontalSpacing="10dp"
                 android:numColumns="2"
                 android:padding="10dp"
-                android:verticalSpacing="10dp" />
-            </LinearLayout>
+                android:stretchMode="columnWidth"
+                android:verticalSpacing="10dp"
+                android:choiceMode="multipleChoice" />
+
+
 
             <LinearLayout
                 android:id="@+id/home_insert_Layout"
@@ -108,17 +105,7 @@
 
                 <Button android:background="#9848d1" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:layout_gravity="bottom" android:id="@+id/home_camera_btn2" android:visibility="visible" android:textSize="20dp" android:textColor="#ffffff" android:text="CAMERA2"/>
 
-                <Button
-                    android:id="@+id/home_gallery_btn2"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_gravity="bottom"
-                    android:layout_weight="1"
-                    android:background="#9848d1"
-                    android:text="Grab"
-                    android:textColor="#ffffff"
-                    android:textSize="20dp"
-                    android:visibility="visible" />
+                <Button android:background="#9848d1" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_weight="1" android:layout_gravity="bottom" android:id="@+id/home_grab_btn" android:visibility="visible" android:textSize="20dp" android:textColor="#ffffff" android:text="Grab"/>
 
                 <Button
                     android:id="@+id/home_gallery_btn"
