--- a/HangerApplication/app/src/main/res/layout/item_home_gridview_check.xml
+++ b/HangerApplication/app/src/main/res/layout/item_home_gridview_check.xml
@@ -1,58 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+
+<com.example.geehy.hangerapplication.gridview_home.CheckableLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:orientation="vertical"
-    android:padding="15dp">
+    android:descendantFocusability="blocksDescendants">
 
-    <CheckBox
-        android:id="@+id/check"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        />
 
-    <ImageView
-        android:id="@+id/homeitem"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:srcCompat="@drawable/tempimg" />
+        android:layout_height="match_parent"
+        android:background="#ffffff"
+        android:orientation="vertical"
+        android:padding="15dp">
 
-    <TextView
-        android:id="@+id/item_clothesname"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
+            android:fillViewport="true" >
 
-    <TableRow
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stretchColumns="0,1,2">
+
+            <ImageView
+                android:id="@+id/homeitem"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerCrop"
+                android:src="@null"
+                android:layout_alignParentTop="true"
+                android:visibility="visible" />
+
+            <CheckBox
+                android:id="@+id/check"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:clickable="false"
+                />
+        </RelativeLayout>
+
 
         <TextView
-            android:id="@+id/home_colorView1"
+            android:id="@+id/item_clothesname"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_weight="1"
-            android:text="" />
+            android:layout_height="wrap_content"
+            android:text="TextView" />
 
-        <TextView
-            android:id="@+id/home_colorView2"
+        <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginEnd="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_weight="1"
-            android:text=""
-            android:textAppearance="@style/TextAppearance.AppCompat" />
-    </TableRow>
+            android:layout_height="wrap_content"
+            android:stretchColumns="0,1,2">
 
-</LinearLayout>
+            <TextView
+                android:id="@+id/home_colorView1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_weight="1"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/home_colorView2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
+                android:layout_weight="1"
+                android:text=""
+                android:textAppearance="@style/TextAppearance.AppCompat" />
+        </TableRow>
+
+    </LinearLayout>
+
+</com.example.geehy.hangerapplication.gridview_home.CheckableLinearLayout>
