--- a/HangerApplication/app/src/main/res/layout/item_codi_gridview.xml
+++ b/HangerApplication/app/src/main/res/layout/item_codi_gridview.xml
@@ -12,7 +12,7 @@
         <ImageView
             android:id="@+id/codi_item"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
