--- a/HangerApplication/app/src/main/res/layout/activity_edit_closet.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_edit_closet.xml
@@ -147,7 +147,8 @@
             android:layout_alignParentEnd="true"
             android:layout_below="@+id/color_Edittext"
             android:completionHint="pick an item"
-            android:completionThreshold="2"
+            android:completionThreshold="3"
+            android:hint="ZARA, UNIQLO ..."
             android:imeOptions="actionDone"
             android:lines="1"
             android:singleLine="true"
