--- a/HangerApplication/app/src/main/res/layout/item_codi_gridview.xml
+++ b/HangerApplication/app/src/main/res/layout/item_codi_gridview.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="horizontal">
 
         <ImageView
@@ -17,8 +17,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            android:layout_weight="1"
-            app:srcCompat="@drawable/tempimg" />
+            android:layout_weight="1" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
