--- a/HangerApplication/app/src/main/res/layout/activity_calendar.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_calendar.xml
@@ -39,9 +39,9 @@ android:weightSum="1">
         android:layout_height="50dp"
         android:layout_gravity="center"
         android:padding="10dp"
-        android:textAlignment="center"
+        android:textAlignment="textStart"
         android:textColor="#000000"
-        android:textSize="17dp" />
+        android:textSize="15sp" />
 
     <ImageButton
         android:id="@+id/delete_btn"
