--- a/HangerApplication/app/src/main/res/layout/activity_grabcut2.xml
+++ b/HangerApplication/app/src/main/res/layout/activity_grabcut2.xml
@@ -5,76 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".GrabcutActivity2">
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="확정"
-                    android:layout_weight="1"
-                    android:onClick="onGrabCut"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="리셋"
-                    android:layout_weight="1"
-                    android:onClick="onReset"/>
-                <Button
-                    android:id="@+id/Save"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="저장"
-                    android:layout_weight="1"
-                    android:onClick="save"/>
-            </LinearLayout>
-        </HorizontalScrollView>>
-
-        <HorizontalScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="전경"
-                    android:layout_weight="1"
-                    android:onClick="onFlags"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="배경"
-                    android:layout_weight="1"
-                    android:onClick="onFlags"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="범위"
-                    android:layout_weight="1"
-                    android:onClick="onFlags"/>
-
-            </LinearLayout>
-        </HorizontalScrollView>
 
         <ImageView
             android:id="@+id/image_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="490dp"
+            android:layout_gravity="center"
             android:adjustViewBounds="true"
-            android:background="#435434"/>
+            android:background="#ffffff" />
+
+        <include
+            android:id="@+id/my_grab_menu"
+            layout="@layout/my_menu"
+
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
