--- a/HangerApplication/app/src/main/res/layout/item_codi_gridview.xml
+++ b/HangerApplication/app/src/main/res/layout/item_codi_gridview.xml
@@ -5,19 +5,20 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/codi_item"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginTop="5dp"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            app:srcCompat="@drawable/tempimg" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
